--- a/Source/AdrMobileExperts.dproj
+++ b/Source/AdrMobileExperts.dproj
@@ -1,7 +1,7 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
         <ProjectGuid>{EC4C27B2-4F5A-4C69-B843-5224CF92F4C0}</ProjectGuid>
-        <MainSource>MobileExperts.dpk</MainSource>
+        <MainSource>AdrMobileExperts.dpk</MainSource>
         <ProjectVersion>19.4</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
@@ -81,7 +81,7 @@
         <GenPackage>true</GenPackage>
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;$(DCC_Namespace)</DCC_Namespace>
         <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
-        <SanitizedProjectName>MobileExperts</SanitizedProjectName>
+        <SanitizedProjectName>AdrMobileExperts</SanitizedProjectName>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Android)'!=''">
         <DCC_CBuilderOutput>None</DCC_CBuilderOutput>
@@ -183,7 +183,7 @@
         <BorlandProject>
             <Delphi.Personality>
                 <Source>
-                    <Source Name="MainSource">MobileExperts.dpk</Source>
+                    <Source Name="MainSource">AdrMobileExperts.dpk</Source>
                 </Source>
             </Delphi.Personality>
             <Deployment Version="3">
@@ -202,9 +202,9 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\22.0\Bpl\MobileExperts.bpl" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\22.0\Bpl\AdrMobileExperts.bpl" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
-                        <RemoteName>MobileExperts.bpl</RemoteName>
+                        <RemoteName>AdrMobileExperts.bpl</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
